--- a/pages/Toys.html
+++ b/pages/Toys.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content=form
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Toys</title>
 </head>
 <body>
     <header class="header">
@@ -39,99 +39,121 @@
         </ul>
     </header>
     <h1 class="title">TOY FOR KIDS</h1>
-    <ul class="way__list">
-        <li class="way__list-item">
-            <p class="way__list-text">Home</p>
+    <ul class="breadcrumps__list">
+        <li class="breadcrumps__list-item">
+            <p class="breadcrumps__list-text">Home</p>
         </li>
-        <li class="way__list-item">
-            <img src="../images/Category/Vector.png" alt="way__list-vector" class="way__list-img">
+        <li class="breadcrumps__list-item">
+            <img src="../images/Category/Vector.png" alt="breadcrumps__list-vector" class="breadcrumps__list-img">
         </li>
-        <li class="way__list-item">
-            <p class="way__list-text">Catalog</p>
+        <li class="breadcrumps__list-item">
+            <p class="breadcrumps__list-text">Catalog</p>
         </li>
-        <li class="way__list-item">
-            <img src="../images/Category/Vector.png" alt="way__list-vector" class="way__list-img">
+        <li class="breadcrumps__list-item">
+            <img src="../images/Category/Vector.png" alt="breadcrumps__list-vector" class="breadcrumps__list-img">
         </li>
-        <li class="way__list-item">
-            <p class="way__list-text">Toys</p>
+        <li class="breadcrumps__list-item">
+            <p class="breadcrumps__list-text">Toys</p>
         </li>
     </ul>
-    <form class="pagination">
-        <ul class="pagination__list">
-            <li class="pagination__list-item">
-                <h2 class="pagination__list-text">Cost</h2>
-                <input type="range" class="pagination__list-input">
+    <form class="form">
+        <ul class="form__list">
+            <li class="form__list-item">
+                <h2 class="form__list-text">Cost</h2>
+                <input type="range" class="form__list-input">
             </li>
-            <li class="pagination__list-item">
-                <h2 class="pagination__list-text">Color</h2>
-                <input type="checkbox" name="color-one" class="pagination__list-input" value="color-one"><br>
-                <input type="checkbox" name="color-two" class="pagination__list-input" value="color-two"><br>
-                <input type="checkbox" name="color-free" class="pagination__list-input" value="color-free"><br>
-                <input type="checkbox" name="color-four" class="pagination__list-input" value="color-four">
+        <ul class="form__list">
+            <li class="form__list-item">
+                <h2 class="form__list-text">Color</h2>
             </li>
-            <li class="pagination__list-item">
-                <h2 class="pagination__list-text">Delivery</h2>
-                <input type="radio" class="pagination__list-input" id="free" name="shipping" value="free">
-                <label for="free">Free shipping</label><br>
-                <input type="radio" class="pagination__list-input" id="fast" name="shipping" value="fast">
+            <li class="form__list-item">
+                <input type="checkbox" name="color-one" class="form__list-input" value="color-one"><br>
+            </li>
+            <li class="form__list-item">
+                <input type="checkbox" name="color-two" class="form__list-input" value="color-two"><br>
+            </li>
+            <li class="form__list-item">
+                <input type="checkbox" name="color-free" class="form__list-input" value="color-free"><br>
+            </li>
+            <li class="form__list-item">
+                <input type="checkbox" name="color-four" class="form__list-input" value="color-four">
+            </li>
+        </ul>
+        <ul>
+            <li class="form__list-item">
+                <h2 class="form__list-text">Delivery</h2>
+            </li>
+            <li class="form__list-item">
+                <input type="radio" class="form__list-input" id="free" name="shipping" value="free">
+                <label for="free">Free shipping</label><cards<li class="form__list-item">
+            </li>
+                <input type="radio" class="form__list-input" id="fast" name="shipping" value="fast">
                 <label for="fast">Fast shipping</label>
             </li>
-            <li class="pagination__list-item">
-                <h2 class="pagination__list-text">Amount</h2>
-                <input type="button" class="pagination__list-button" value="0-5">
-                <input type="button" class="pagination__list-button" value="10-20">
-                <input type="button" class="pagination__list-button" value="20-50">
+        </ul>
+        <ul>
+            <li class="form__list-item">
+                <h2 class="form__list-text">Amount</h2> 
             </li>
-            <li class="pagination__list-item">
-                <input type="button" name="button" class="pagination__list" value="Apply">
+            <li class="form__list-item">
+                <input type="button" class="form__list-button" value="0-5">    
+            </li>
+            <li class="form__list-item">
+                <input type="button" class="form__list-button" value="10-20">
+            </li>
+            <li class="form__list-item">
+                <input type="button" class="form__list-button" value="20-50">
+            </li>
+        </ul>
+            <li class="form__list-item"breadcrumps            <input type="button" name="button" class="form__list" value="Apply">
             </li>
         </ul>
     </form>
-    <section class="preview">
-        <ul class="preview__list">
-            <li class="preview__list-item">
-                <img src="../images/Category/shark.png" alt="preview__list-pic" class="preview__list-img">
-                <p class="preview__list-text">SHARKY BEAN BAG CHAIR COVER</p>
-                <h2 class="preview__list-subtitle">$60.00 USD</h2>
+    <section class="cards">
+        <ul class="cards__list">
+            <li class="cards__list-item">
+                <img src="../images/Category/shark.png" alt="cards__list-pic" class="cards__list-img">
+                <p class="cards__list-text">SHARKY BEAN BAG CHAIR COVER</p>
+                <h2 class="cards__list-subtitle">$60.00 USD</h2>
             </li>
-            <li class="preview__list-item">
-                <img src="../images/Category/brass.png" alt="preview__list-pic" class="preview__list-img">
-                <p class="preview__list-text">BRASS DECO FRAMES</p>
-                <h2 class="preview__list-subtitle">$66.00 USD</h2>
+            <li class="cards__list-item">
+                <img src="../images/Category/brass.png" alt="cards__list-pic" class="cards__list-img">
+                <p class="cards__list-text">BRASS DECO FRAMES</p>
+                <h2 class="cards__list-subtitle">$66.00 USD</h2>
             </li>
-            <li class="preview__list-item">
-                <img src="../images/Category/cibo.png" alt="preview__list-pic" class="preview__list-img">
-                <p class="preview__list-text">CIBO FULL APRON</p>
-                <h2 class="preview__list-subtitle">$60.00 USD</h2>
+            <li class="cards__list-item">
+                <img src="../images/Category/cibo.png" alt="cards__list-pic" class="cards__list-img">
+                <p class="cards__list-text">CIBO FULL APRON</p>
+                <h2 class="cards__list-subtitle">$60.00 USD</h2>
             </li>
-            <li class="preview__list-item">
-                <img src="../images/Category/gatcha.png" alt="preview__list-pic" class="preview__list-img">
-                <p class="preview__list-text">GATCHA GATCHA GUMBALL MACHINE</p>
-                <h2 class="preview__list-subtitle">$56.00 USD</h2>
+            <li class="cards__list-item">
+                <img src="../images/Category/gatcha.png" alt="cards__list-pic" class="cards__list-img">
+                <p class="cards__list-text">GATCHA GATCHA GUMBALL MACHINE</p>
+                <h2 class="cards__list-subtitle">$56.00 USD</h2>
             </li>
-            <li class="preview__list-item">
-                <img src="../images/Category/advent.png" alt="preview__list-pic" class="preview__list-img">
-                <p class="preview__list-text">CHRISTMAS ADVENT SCENTED CANDLE</p>
-                <h2 class="preview__list-subtitle">$29.00 USD</h2>
+            <li class="cards__list-item">
+                <img src="../images/Category/advent.png" alt="cards__list-pic" class="cards__list-img">
+                <p class="cards__list-text">CHRISTMAS ADVENT SCENTED CANDLE</p>
+                <h2 class="cards__list-subtitle">$29.00 USD</h2>
             </li>
-            <li class="preview__list-item">
-                <img src="../images/Category/tea.png" alt="preview__list-pic" class="preview__list-img">
-                <p class="preview__list-text">TANGLE SPINNING TEA LIGHT</p>
-                <h2 class="preview__list-subtitle">$56.00 USD</h2>
+            <li class="cards__list-item">
+                <img src="../images/Category/tea.png" alt="cards__list-pic" class="cards__list-img">
+                <p class="cards__list-text">TANGLE SPINNING TEA LIGHT</p>
+                <h2 class="cards__list-subtitle">$56.00 USD</h2>
             </li>
         </ul>
-        <ul class="preview__list">
-            <li class="preview__list-item">
-                <img src="../images/Category/Vector+.png" alt="preview__list-arrow" class="preview__list-img">
+        <ul class="cards__list">
+            <li class="cards__list-item">
+                <img src="../images/Category/Vector+.png" alt="cards__list-arrow" class="cards__list-img">
             </li>
-            <li class="preview__list-item">
-                <p class="preview__list-number">1</p>
-                <p class="preview__list-number">2</p>
-                <p class="preview__list-number">3</p>
-                <p class="preview__list-number">4</p> 
+            <li class="cards__list-item">
+                <p class="cards__list-number">1</p>
+                <p class="cards__list-number">2</p>
+                <p class="cards__list-number">3</p>
+                <p class="cards__list-number">4</p> 
             </li>
-            <li class="preview__list-item">
-                <img src="../images/Category/Vector-.png" alt="preview__list-arrow" class="preview__list-img">
+            <li class="cards__list-item">
+                <img src="../images/Category/Vector-.png" alt="cards__list-arrow" class="cards__list-img">
             </li>
         </ul>
     </section>
