--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header">
-        <a href="#" class="header__logo">
-            <img src="./images/Header/Union.png" alt="Logotype DLK" class="header__logo-img" >
+    <header class="header container">
+        <a class="header__logo" href="#">
+            <img class="header__logo-img" src="./images/Header/Union.png" alt="Logotype DLK" width="100" height="52">
         </a>
         <nav class="header__nav">
             <ul class="header__nav-list">
                 <li class="header__nav-item">
-                    <a href="#" class="header__nav-link">BLOG</a>
+                    <a class="header__nav-link" href="#">BLOG</a>
                 </li>
                 <li class="header__nav-item">
-                    <a href="#" class="header__nav-link">CATALOG</a>
+                    <a class="header__nav-link" href="#">CATALOG</a>
                 </li>
                 <li class="header__nav-item">
-                    <a href="#" class="header__nav-link">ABOUT US</a>
+                    <a class="header__nav-link" href="#">ABOUT US</a>
                 </li>
             </ul>
         </nav>
@@ -34,14 +34,13 @@
             <li class="header__list-item">
                 <div class="header__list-wrapper">
                     <form class="header__list-form">
-                        <input type="text" placeholder="Search here..." class="header__list-input">
-                        <button type="submit">
-                            <img src="./images/Header/XMLID.png" alt="magnifying glass" class="header__list-icon">
+                        <button class="header__list-btn" type="submit">
+                            <img class="header__list-icon" src="./images/Header/XMLID.png" alt="magnifying glass">
                         </button>
                     </form>
                 </div>
             </li>
-            <li class="header__list-item"><a href="#">CONTACT US</a></li>
+            <li class="header__list-item"><a class="header__list-link" href="#">CONTACT US</a></li>
         </ul>
     </header>
     <main>
@@ -57,7 +56,7 @@
                 <h1 class="banner__title">THE OOH NOO COLLECTION</h1>
                 <p class="banner__phrase">Desinger in Slovenia</p>
                 <button class="banner__btn">EXPLORE NOW</button>
-                <img src="./images/main/banner_img.png" alt="monster" class="banner__img">
+                <img class="banner__img" src="./images/main/banner_img.png" alt="monster">
                 <h3 class="banner__offer">FREE (CONTINENTAL) USA SHIPPING ON ALL ORDERS OF $100 USD OR MORE!</h3>
             </div>
         </section>
@@ -66,52 +65,52 @@
         <h2 class="services__title">CATEGORY PRODUCTS</h2> 
         <ul class="services__list">
             <li class="services__list-item">
--              <img src="./images/Category/Product-one.png" alt="services__list-pic" class="services__list-img">
-                <a href="#" class="services__list-link">
+-              <img class="services__list-img" src="./images/Category/Product-one.png" alt="services__list-pic">
+                <a class="services__list-link" href="#">
                     <h3 class="services__list-subtitle">APPAREL KIDS</h3>
                 </a>
             </li>
             <li class="services__list-item">
-                <img src="./images/Category/Product-two.png" alt="services__list-pic" class="services__list-img">
-                <a href="#" class="Services__list-link">
+                <img class="services__list-img" src="./images/Category/Product-two.png" alt="services__list-pic">
+                <a class="Services__list-link" href="#">
                     <h3 class="services__list-subtitle">HOLIDAY SHOP</h3>
                 </a>
             </li>
             <li class="services__list-item">
-                <img src="./images/Category/Product_bkd-free.png" alt="services__list-pic" class="services__list-img">
-                <a href="#" class="services__list-link">
+                <img class="services__list-img" src="./images/Category/Product_bkd-free.png" alt="services__list-pic">
+                <a class="services__list-link" href="#">
                     <h3 class="services__list-subtitle">TOYS</h3>
                 </a>
             </li>
             <li class="services__list-item">
-                <img src="./images/Category/Product-four.png" alt="services__list-pic" class="services__list-img">
-                <a href="#" class="services__list-link">
+                <img class="services__list-img" src="./images/Category/Product-four.png" alt="services__list-pic">
+                <a class="services__list-link" href="#">
                     <h3 class="services__list-subtitle">ACCESSORIES</h3>
                 </a>
             </li>
             <li class="services__list-item">
-                <img src="./images/Category/Product-five.png" alt="services__list-pic" class="services__list-img">
-                <a href="#" class="services__list-link">
+                <img class="services__list-img" src="./images/Category/Product-five.png" alt="services__list-pic">
+                <a class="services__list-link" href="#">
                     <h3 class="services__list-subtitle">SALE</h3>
                 </a>
             </li>
             <li class="services__list-item">
-                <img src="./images/Category/Product-six.png" alt="services__list-pic" class="services__list-img">
-                <a href="#" class="services__list-link">
+                <img class="services__list-img" src="./images/Category/Product-six.png" alt="services__list-pic">
+                <a class="services__list-link" href="#">
                     <h3 class="services__list-subtitle">APPAREL ADULTS</h3>
                 </a>
             </li>
         </ul>
         <button class="services__arrow">
-            <img src="./images/main/button.png" alt="vector" class="services__arrow-img">
+            <img class="services__arrow-img" src="./images/main/button.png" alt="arrow">
         </button>
         <button class="services__arrow">
-            <img src="./images/main/button-two.png" alt="vector" class="services__arrow-img">
+            <img class="services__arrow-img" src="./images/main/button-two.png" alt="arrow">
         </button>
         <p class="services__phrase">Modern finds for the modern home. Curated goods by unique designers around the world from fashion to furniture for kids and adults.</p>
     </section>
     <section class="page">
-        <img src="./images/delivery/girl.png" alt="Girl" class="page__img">
+        <img class="page__img" src="./images/delivery/girl.png" alt="Girl">
         <ul class="page__list">
             <li class="page__list-item"> 
                 <p class="page__list-title">DELIVERY</p>
@@ -132,7 +131,7 @@
                 <p class="page__list-text">What started as an outlet to deal with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!</p>
             </li>
             <li class="page__list-item">
-                <a href="#" class="page__list-link">
+                <a class="page__list-link" href="#">
                     <h3 class="page__list-text">LEARN MORE</h3>
                 </a>
             </li>
@@ -141,16 +140,16 @@
     <section class="social">
         <ul class="social__list">
             <li class="social__list-item">
-                <img src="./images/logo/mail.png" alt="square" class="social__list-img">
+                <img class="social__list-img" src="./images/logo/mail.png" alt="square">
             </li>
             <li class="social__list-item">
-                <img src="./images/logo/apple.png" alt="square" class="social__list-img">
+                <img class="social__list-img" src="./images/logo/apple.png" alt="square">
             </li>
             <li class="social__list-item">
-                <img src="./images/logo/eltex.png" alt="square" class="social__list-img">
+                <img class="social__list-img" src="./images/logo/eltex.png" alt="square">
             </li>
             <li class="social__list-item">
-                <img src="./images/logo/owox.png" alt="square" class="social__list-img">
+                <img class="social__list-img" src="./images/logo/owox.png" alt="square">
             </li>
         </ul>
     </section>
@@ -158,94 +157,121 @@
         <h2 class="promo__title">DESIGN LIFE KIDS</h2>
         <p class="promo__text">About Us</p>
         <p class="promo__text">Some days i feel like i've been working on dlk my entire life and there are other days thet i am completely shocked that four years have flown by. It's simply magical.</p>
-        <a href="#" class="promo__link">
+        <a class="promo__link" href="#">
             <h2 class="promo__title">BUY NOW</h2>
         </a>
     </section>
     <article class="aside">
         <h2 class="aside__title">CONTACTS</h2>
         <p class="aside__text">Some days i feel like i've been working on dlk my entire life and there are other days thet i am completely shocked that four years have flown by. It's simply magical.</p>
-        <img src="./images/contacts/map.png" alt="map" class="aside__img">
+        <img class="aside__img" src="./images/contacts/map.png" alt="map">
     </article>
-    <footer>
-        <section class="info">
-            <h2 class="info__title">Navigation</h2>
-            <ul class="info__list">
-                <li class="info__list-item">
-                    <a href="#" class="info__list-link">About Us</a>
+    <footer class="footer container">
+        <section class="footer__title">
+            <ul class="footer__title-listfooter">
+                <li class="footer__title-item">
+                    <p class="footer__title-text">Navigation</p>
                 </li>
-                <li class="info__list-item">
-                    <a href="#" class="info__list-link">Blog</a>
+                <li class="footer__title-item">
+                    <p class="footer__title-text">Customer Information</p>
                 </li>
-                <li class="info__list-item">
-                    <a href="#" class="info__list-link">Design Services</a>
-                </li>
-                <li class="info__list-item">
-                    <a href="#" class="info__list-link">Featured On</a>
-                </li>
-                <li class="info__list-item">
-                    <a href="#" class="info__list-link">2018 Holiday Catalog</a>
-                </li>
-                <li class="info__list-item">
-                    <a href="#" class="info__list-link">Shop By Designer</a>
+                <li class="footer__title-item">
+                    <p class="footer__title-text">Connect</p>
                 </li>
             </ul>
         </section>
-        <section class="aside">
-            <h2 class="aside__">Customer Information</h2>
-            <ul class="aside__list">
-                <li class="aside__list-item">
-                    <a href="#" class="aside__list-link">Contact Us</a>
+        <section class="footer__info">
+            <ul class="footer__info-list">
+                <li class="footer__info-item text">
+                    <a class="footer__info-link" href="#">About Us</a>
                 </li>
-
-                <li class="aside__list-item">
-                    <a href="#" class="aside__list-link">Sale Exclusions</a>
+                <li class="footer__info-item text">
+                    <a class="footer__info-link" href="#">Blog</a>
                 </li>
-                <li class="aside__list-item">
-                    <a href="#" class="aside__list-link">Shipping & Returns</a>
+                <li class="footer__info-item text">
+                    <a class="footer__info-link" href="#">Design Services</a>
                 </li>
-                <li class="aside__list-item">
-                    <a href="#" class="aside__list-link">Terms & Conditions</a>
+                <li class="footer__info-item text">
+                    <a class="footer__info-link" href="#">Featured On</a>
                 </li>
-                <li class="aside__list-item">
-                    <a href="#" class="aside__list-link">Privacy Policy</a>
+                <li class="footer__info-item text">
+                    <a class="footer__info-link" href="#">2018 Holiday Catalog</a>
                 </li>
-                <li class="aside__list-item">
-                    <a href="#" class="aside__list-link">Search</a>
+                <li class="footer__info-item text">
+                    <a class="footer__info-link" href="#">Shop By Designer</a>
+                </li>
+            </ul>
+            <ul class="footer__info-aside">   
+                <li class="footer__info-item text">
+                    <a class="footer__info-link" href="#">Contact Us</a>
+                </li>
+                <li class="footer__info-item text">
+                    <a class="footer__info-link" href="#">Sale Exclusions</a>
+                </li>
+                <li class="footer__info-item text">
+                    <a class="footer__info-link" href="#">Shipping & Returns</a>
+                </li>
+                <li class="footer__info-item text">
+                    <a class="footer__info-link" href="#">Terms & Conditions</a>
+                </li>
+                <li class="footer__info-item text">
+                    <a class="footer__info-link" href="#">Privacy Policy</a>
+                </li>
+                <li class="footer__info-item text">
+                    <a class="footer__info-link" href="#">Search</a>
+                </li>
+            </ul>
+            <ul class="footer__info-logo">
+                <li class="footer__info-email">
+                    <form class="footer__info-form">
+                        <input class="footer__info-input" type="email" name="Email" value="Email" required>
+                        <button class="footer__info-btn" type="submit">JOIN</button>
+                    </form>
+                </li>
+                <li class="footer__info-icon">
+                    <a class="footer__info-link" href="#">
+                        <img class="footer__info-img" src="./images/footer/Facebook.png" alt="Logotype Facebook">
+                    </a>
+                </li>
+                <li class="footer__info-icon">
+                    <a class="footer__info-link" href="#">
+                        <img class="footer__info-img" src="./images/footer/Twitter.png" alt="Logotype Twitter">
+                    </a>
+                </li>
+                <li class="footer__info-icon">
+                    <a class="footer__info-link" href="#">
+                        <img class="footer__info-img" src="./images/footer/Pinterest.png" alt="Logotype Pinterest">
+                    </a>
+                </li>
+                <li class="footer__info-icon">
+                    <a class="footer__info-link" href="#">
+                        <img class="footer__info-img" src="./images/footer/Instagram.png" alt="Logotype Instagram">
+                    </a>
                 </li>
             </ul>
         </section>
-        <section class="logo">
-            <h2 class="logo__title">Connect</h2>
-            <form class="logo__form">
-                <input type="email" name="email" class="logo__input" id="email" required>
-                <button type="submit" class="logo__btn">JOIN</button>
-            </form>
-            <ul class="logo__list">
-                <li class="logo__list-item">
-                    <a href="#" class="logo__list-link">
-                        <img src="./images/footer/Facebook.png" alt="Logotype Facebook" class="logo__list-img">
-                    </a>
+        <section class="footer__subtitle">
+            <ul class="footer__subtitle-list">
+                <li class="footer__subtitle-item">
+                    <div class="footer__subtitle-rating">
+                        <p class="footer__subtitle-ratingStar">Company Rating</p>
+                        <div class="footer__subtitle-group">
+                            <input class="footer__subtitle-star" type="radio" name="rating" value="one" aria-label="terrible" checked>
+                            <input class="footer__subtitle-star" type="radio" name="rating" value="two" aria-label="bearable">
+                            <input class="footer__subtitle-star" type="radio" name="rating" value="free" aria-label="normally">
+                            <input class="footer__subtitle-star" type="radio" name="rating" value="four" aria-label="fine">
+                            <input class="footer__subtitle-star" type="radio" name="rating" value="five" aria-label="wonderful">
+                        </div>
+                    </div>
                 </li>
-                <li class="logo__list-item">
-                    <a href="#" class="logo__list-link">
-                        <img src="./images/footer/Twitter.png" alt="Logotype Twitter" class="logo__list-img">
-                    </a>
+                <li class="footer__subtitle-item">
+                    <p class="footer__subtitle-signature">Copyright © 2018 Dlk • Design Life Kids</p>
                 </li>
-                <li class="logo__list-item">
-                    <a href="#" class="logo__list-link">
-                        <img src="./images/footer/Pinterest.png" alt="Logotype Pinterest" class="logo__list-img">
-                    </a>
-                </li>
-                <li class="logo__list-item">
-                    <a href="#" class="logo__list-link">
-                        <img src="./images/footer/Instagram.png" alt="Logotype Instagram" class="logo__list-img">
-                    </a>
+                <li class="footer__subtitle-item">
+                    <a class="footer__subtitle-signature only" href="#"><p>Web Design — Direct Line Development</p></a>
                 </li>
             </ul>
         </section>
-        <h2 class="signature">Copyright © 2018 Dlk • Design Life Kids</h2>
-        <h2 class="signature">Web Design — Direct Line Development</h2>
     </footer>
     <div class="form">
         <form action="#" method="get" class="form__form">
